[package]
name = "au4-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bigdecimal = "0.4.1"
chrono = "0.4.38"
clap = { version = "4.4.5", features = ["derive"] }
fake = { version = "2.8", features = ["derive"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
toml = "0.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev]
debug = 0
