[package]
name = "bxcrawler"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bigdecimal = "0.4.8"
chrono = "0.4.40"
clap = { version = "4.5.25", features = ["derive"] }
fake = { version = "4.2.0", features = ["derive"] }
jsonwebtoken = "9.3.1"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
